--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,6 +10,8 @@
   .bg {
     padding: 1rem;
     background-image: url("../assets/pageBg.png");
+    width:100% !important;
+    height:100% !important;
   }
 
   .host-body {
